# src/controllers/personnel.controller.js
@@ -31,7 +31,14 @@ module.exports={
          /*
             #swagger.tags = ["Personnels"]
             #swagger.summary = "Create Personnel"
-            
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
         */
 
         const isLead = req.body?.isLead || false
@@ -63,8 +70,18 @@ module.exports={
            /*
             #swagger.tags = ["Personnels"]
             #swagger.summary = "Update Personnel"
-            
+            #swagger.description = "Look to <b>'Models/Personnel'</b> for parameters."
+            #swagger.parameters['body'] = {
+                in: 'body',
+                required: 'true',
+                schema: {
+                    $ref: '#/definitions/Personnel'
+                }
+            }
         */
+
+            
+     
 
         // isLead Control:
         const isLead = req.body?.isLead || false
